--- a/serverless.yml
+++ b/serverless.yml
@@ -6,8 +6,13 @@ provider:
   runtime: nodejs12.x
 
 functions:
-  hello:
-    handler: handler.hello
+  getUser:
+    handler: lambda/getUser.handler
+    events:
+      - http:
+          method: GET
+          path: get-user/{ID}
+          cors: true
 
 plugins:
   - serverless-s3-sync
